--- a/app/globals.css
+++ b/app/globals.css
@@ -92,3 +92,50 @@ body,
 .bg-full-vh {
   min-height: 100vh; /* This makes sure your gradient background covers at least the full viewport height */
 } 
+
+
+
+@layer components {
+  .btn {
+    @apply px-4 py-2 rounded-lg font-medium inline-flex items-center justify-center tracking-tight;
+  }
+
+  .btn-primary {
+    @apply bg-gray-900 text-white;
+  }
+
+  .btn-text {
+    @apply text-black bg-transparent;
+  }
+}
+
+.logo-ticker-image {
+  @apply h-8 w-auto
+}
+
+
+.tag{
+  @apply text-sm inline-flex border border-[#222]/10 px-3 py-1 rounded-lg tracking-tight
+}
+
+.section-title {
+  @apply text-center text-3xl md:text-[54px] md:leading-[60px]
+  font-bold tracking-tighter bg-gradient-to-b from-black to-[#001E80] text-transparent bg-clip-text 
+}
+
+.section-title-style {
+  @apply text-center text-3xl md:text-[54px] md:leading-[60px]
+  font-bold tracking-tighter bg-[linear-gradient(to_right,#DD7DDF,#E1CD86,#BBCB92,#71C2EF,#3BFFFF,#DD7DDF,#E1CD86,#BBCB92,#71C2EF,#3BFFFE)] [background-size:200%] text-transparent bg-clip-text
+}
+
+.section-description {
+  @apply text-center text-[22px] leading-[30px] tracking-tight text-[#010D3E]
+}
+
+.section-heading {
+  @apply max-w-[540px] mx-auto
+}
+
+.card {
+  @apply p-10 border border-[#F1F1F1] rounded-3xl shadow-[0_7px_14px_#EAEAEA] max-w-xs w-full
+}
